# 2016summer

./: CMakeLists.txt  README.md  package.xml
cfg/: path_para.cfg  path_para.cfg~
develop/: binFinder.py  connections.py  dataCollection.py  dataf.npy  hsvhistogram.py  imageprocessing.py  simulations.py  targetf.npy
launch/: cam.launch  cam.launch~
scripts/: GUIconfig.py  connections.py~  dataCollection.py  dataf.npy  imageprocessing.py  path_states.py  path_states_2.py  targetf.npy  testing.py  testing.py~  tut.py
src/: connections.cpp  heading_control.h~  imageprocessing.cpp  imageprocessing.h  path_client.h  testing.cpp  vision_bridge.h
